Add new div with text to index.html

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
         <span><strong>Timezone:</strong> <span id="timezone"></span></span>
     </div>
     <div class="text">كس امك قحاب سيرفرك كله ثغرات</div>
+    <div class="text">!النمرود مر من هنا!</div>
 
     <script>
          fetch('https://ipinfo.io/json')
