Update text content in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <span><strong>Timezone:</strong> <span id="timezone"></span></span>
     </div>
     <div class="text">كس امك قحاب سيرفرك كله ثغرات</div>
-    <div class="text">!النمرود مر من هنا!</div>
+    <div class="text">ReV - S O U L just sey hiiii</div>
 
     <script>
          fetch('https://ipinfo.io/json')
